crates/service/tests/diagnostics/snapshots/features__diagnostics__unused__tag_unused.snap
---
source: crates/service/tests/diagnostics/unused.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 3
        },
        "end": {
          "line": 2,
          "character": 6
        }
      },
      "severity": 2,
      "code": "unused",
      "source": "wat",
      "message": "tag `0` is never used",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 7
        },
        "end": {
          "line": 3,
          "character": 9
        }
      },
      "severity": 2,
      "code": "unused",
      "source": "wat",
      "message": "tag `$e` is never used",
      "tags": [
        1
      ]
    }
  ]
}
